--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "01-introduction",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "git-commit-msg-linter": "^4.1.1"
-  }
+    "name": "01-introduction",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "git-commit-msg-linter": "^4.1.1"
+    }
 }
