--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^5.0.0",
+        "eslint-plugin-standard": "^5.0.0",
         "git-commit-msg-linter": "^4.1.1",
         "husky": "^7.0.4",
         "lint-staged": "^12.3.4",
