--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@typescript-eslint/eslint-plugin": "^4.0.1",
         "eslint": "^7.12.1",
         "eslint-config-standard-with-typescript": "^21.0.1",
+        "eslint-config-steelbrain": "^11.0.0",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^5.0.0",
@@ -23,5 +24,8 @@
         "husky": "^7.0.4",
         "lint-staged": "^12.3.4",
         "typescript": "^4.5.5"
+    },
+    "dependencies": {
+        "ts-node": "^10.5.0"
     }
 }
